# yggdrasil

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  default.nix  flake.nix  images.toml  shell.nix  treefmt.toml  user.toml  users.toml
.github/workflows/: build.yml  check.yml  flakehub-push.yml  format.yml  iso.yml  packages.yml  update.yml
config/: starship.toml
config/.config/: aliasrc  asound.state  mimeapps.list  picom.conf  starship.toml
config/dwm/: .Xresources  sxhkdrc  xinitrc  xresources
config/eww/: eww.scss
config/git/: config  gitconfig-personal  gitconfig-work
config/hypr/: hyprland.conf  (+1 more)
git/: .gitconfig  .gitconfig-personal  .gitconfig-work
home/: .Xresources  .bashrc  .xinitrc  .xsession  .zshrc
hosts/: default.nix  hardware-configuration.nix  home.nix  niximg.nix
lib/: attrs.nix  default.nix  home-manager.nix  images.nix  modules.nix  nixos.nix  options.nix  private.nix  utils.nix
modules/: agenix.nix  mutable.nix  options.nix  security.nix  xdg.nix
overlays/: default.nix
pkgs/: default.nix
shells/: default.nix  install.nix
subprojects/shell/yggdrasil/: Cargo.toml
subprojects/shell/yggdrasil-shell/: Cargo.toml
subprojects/shell/yggdrasil-shell/src/: error.rs  main.rs  utils.rs
subprojects/shell/yggdrasil-shell/src/core/: luminance.rs  mod.rs
subprojects/shell/yggdrasil-shell/src/core/services/: wallpaper.rs
subprojects/shell/yggdrasil-shell/src/core/shell/: wallpaper.rs
subprojects/shell/yggdrasil/src/: cli.rs  lib.rs  main.rs  protocols.rs
templates/: default.nix
users/: default.nix
(+638 files in other folders)
