[package]
name = "yggdrasil"
version.workspace = true
edition.workspace = true
publish = false


[dependencies]

futures = "0.3.30"
wayland-client = "0.31.3"
wayland-backend = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
wayland-scanner = "0.31.2"
tokio = { version = "1.38.0", features = ["full"] }
directories = "5.0.1"
anyhow = "1.0.86"
yggdrasil-common = { version = "0.0.0", path = "../yggdrasil-common" }
zbus = "4.3.0"
